test_case/rust-lang_rust/81282_765662665.rs
rust
struct S {}

fn main() {
    let s = S {};
    let z = S { #[nonexistent] ..s }; // error: expected identifier, found `..`
}
